Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Nhẫn tâm trộm 7 triệu của cụ bà bán rau 71 tuổi, người phụ nữ bị tạm giữ",
+    "content": "Một phụ nữ 33 tuổi, Đặng Thị Kim Nga, đã bị tạm giữ sau khi trộm 7 triệu đồng từ một cụ bà 71 tuổi đang bán rau tại Quảng Nam. Vụ việc xảy ra vào chiều 18-3, khi Nga lợi dụng sơ hở của cụ bà để thực hiện hành vi trộm cắp. Sau khi bị phát hiện, Nga đã bị công an phường Điện Nam Bắc bắt giữ và thừa nhận hành vi của mình.",
+    "link": "https://tuoitre.vn/nhan-tam-trom-cap-7-trieu-dong-cu-ba-ban-rau-71-tuoi-nguoi-phu-nu-bi-tam-giu-20250319203723255.htm",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 6,
+    "question": "Tại sao Đặng Thị Kim Nga bị tạm giữ?",
+    "answers": [
+      {
+        "text": "Vì trộm 7 triệu đồng của cụ bà bán rau",
+        "correct": true
+      },
+      {
+        "text": "Vì bán rau trái phép",
+        "correct": false
+      },
+      {
+        "text": "Vì không có giấy phép kinh doanh",
+        "correct": false
+      },
+      {
+        "text": "Vì gây rối trật tự công cộng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "TP.HCM đón 200 du khách trên chuyến bay charter đầu tiên từ Iran",
     "content": "TP.HCM vừa đón 200 du khách trên chuyến bay charter đầu tiên từ Iran vào ngày 19-3-2025. Đây là bước tiến quan trọng trong việc mở rộng thị trường du lịch quốc tế, đặc biệt từ khu vực Trung Đông. Du khách sẽ có cơ hội tham quan nhiều địa điểm nổi tiếng tại Việt Nam trong suốt hành trình kéo dài đến cuối tháng 3. Sự kiện này không chỉ tăng cường kết nối hàng không mà còn thúc đẩy giao lưu văn hóa giữa hai quốc gia.",
     "link": "https://tuoitre.vn/tp-hcm-don-200-du-khach-tren-chuyen-bay-charter-dau-tien-tu-iran-20250319195827307.htm",
@@ -1136,28 +1163,32 @@
     ]
   },
   {
-    "title": "6 mẹo giúp bỏ thuốc lá",
-    "content": "Bài viết đưa ra 6 mẹo giúp người hút thuốc lá từ bỏ thói quen này, bao gồm việc lập kế hoạch cụ thể, củng cố ý chí, thay đổi lối sống lành mạnh, tìm kiếm phương pháp thay thế, tìm kiếm sự hỗ trợ từ người thân và sử dụng thuốc theo toa nếu cần. Việc cai thuốc lá cần sự kiên trì và quyết tâm cao, đồng thời nhận thức rõ ràng về tác hại của thuốc lá với sức khỏe.",
-    "link": "https://vnexpress.net/6-meo-giup-bo-thuoc-la-4863176.html",
+    "title": "5 đồ uống góp phần tăng cường sinh lý nữ",
+    "content": "Bài viết giới thiệu 5 loại đồ uống có lợi giúp tăng cường sinh lý nữ, bao gồm trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ và nước ép lựu. Những đồ uống này chứa nhiều chất chống oxy hóa và vitamin, hỗ trợ cải thiện sức khỏe sinh lý và ổn định nội tiết tố. Bên cạnh việc sử dụng các loại đồ uống này, lối sống lành mạnh như tập thể dục và chế độ ăn uống cân bằng cũng rất quan trọng để nâng cao sức khỏe tổng thể của phụ nữ.",
+    "link": "https://vnexpress.net/5-do-uong-gop-phan-tang-cuong-sinh-ly-nu-4863206.html",
     "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Làm thế nào để bỏ thuốc lá hiệu quả?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những loại đồ uống nào có thể giúp tăng cường sinh lý nữ?",
     "answers": [
       {
-        "text": "Lập kế hoạch cai thuốc và thay đổi lối sống.",
+        "text": "Trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ, nước ép lựu",
         "correct": true
       },
       {
-        "text": "Chỉ cần bỏ thuốc là sẽ không còn thèm thuốc.",
+        "text": "Nước ngọt có ga",
         "correct": false
       },
       {
-        "text": "Hút thuốc ít hơn mỗi ngày là đủ.",
+        "text": "Trà sữa",
         "correct": false
       },
       {
-        "text": "Không cần phải có sự hỗ trợ từ người khác.",
+        "text": "Sữa đặc có đường",
+        "correct": false
+      },
+      {
+        "text": "Nước lọc",
         "correct": false
       }
     ]
@@ -1217,32 +1248,28 @@
     ]
   },
   {
-    "title": "5 đồ uống góp phần tăng cường sinh lý nữ",
-    "content": "Bài viết giới thiệu 5 loại đồ uống có lợi giúp tăng cường sinh lý nữ, bao gồm trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ và nước ép lựu. Những đồ uống này chứa nhiều chất chống oxy hóa và vitamin, hỗ trợ cải thiện sức khỏe sinh lý và ổn định nội tiết tố. Bên cạnh việc sử dụng các loại đồ uống này, lối sống lành mạnh như tập thể dục và chế độ ăn uống cân bằng cũng rất quan trọng để nâng cao sức khỏe tổng thể của phụ nữ.",
-    "link": "https://vnexpress.net/5-do-uong-gop-phan-tang-cuong-sinh-ly-nu-4863206.html",
+    "title": "6 mẹo giúp bỏ thuốc lá",
+    "content": "Bài viết đưa ra 6 mẹo giúp người hút thuốc lá từ bỏ thói quen này, bao gồm việc lập kế hoạch cụ thể, củng cố ý chí, thay đổi lối sống lành mạnh, tìm kiếm phương pháp thay thế, tìm kiếm sự hỗ trợ từ người thân và sử dụng thuốc theo toa nếu cần. Việc cai thuốc lá cần sự kiên trì và quyết tâm cao, đồng thời nhận thức rõ ràng về tác hại của thuốc lá với sức khỏe.",
+    "link": "https://vnexpress.net/6-meo-giup-bo-thuoc-la-4863176.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những loại đồ uống nào có thể giúp tăng cường sinh lý nữ?",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Làm thế nào để bỏ thuốc lá hiệu quả?",
     "answers": [
       {
-        "text": "Trà xanh, sinh tố chuối, cà phê đen, rượu vang đỏ, nước ép lựu",
+        "text": "Lập kế hoạch cai thuốc và thay đổi lối sống.",
         "correct": true
       },
       {
-        "text": "Nước ngọt có ga",
+        "text": "Chỉ cần bỏ thuốc là sẽ không còn thèm thuốc.",
         "correct": false
       },
       {
-        "text": "Trà sữa",
+        "text": "Hút thuốc ít hơn mỗi ngày là đủ.",
         "correct": false
       },
       {
-        "text": "Sữa đặc có đường",
-        "correct": false
-      },
-      {
-        "text": "Nước lọc",
+        "text": "Không cần phải có sự hỗ trợ từ người khác.",
         "correct": false
       }
     ]
@@ -1274,33 +1301,6 @@
       },
       {
         "text": "Đề xuất kế hoạch mới",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cụ ông 78 tuổi vào nhà nghỉ 'tâm sự', bị người phụ nữ giật mất chiếc nhẫn vàng",
-    "content": "Công an tỉnh Bình Dương đã tạm giữ bà T.T.X., 47 tuổi, vì hành vi giật nhẫn vàng của cụ ông 78 tuổi, ông P.M.Q., khi cả hai gặp nhau tại nhà nghỉ để 'tâm sự'. Bà X. thừa nhận đã chiếm đoạt chiếc nhẫn vàng của ông Q. để bán lấy tiền tiêu xài. Vụ việc đang được điều tra thêm bởi Công an Bình Dương.",
-    "link": "https://tuoitre.vn/cu-ong-78-tuoi-vao-nha-nghi-tam-su-bi-nguoi-phu-nu-giat-mat-chiec-nhan-vang-20250319165513656.htm",
-    "cat": "phap-luat",
-    "positivity": 2,
-    "importance": 5,
-    "question": "Tại sao bà T.T.X. bị công an tạm giữ?",
-    "answers": [
-      {
-        "text": "Vì giật nhẫn vàng của cụ ông 78 tuổi",
-        "correct": true
-      },
-      {
-        "text": "Vì bán đồ ăn ở nhà nghỉ",
-        "correct": false
-      },
-      {
-        "text": "Vì không có giấy tờ tùy thân",
-        "correct": false
-      },
-      {
-        "text": "Vì gây rối trật tự công cộng",
         "correct": false
       }
     ]
@@ -4506,33 +4506,6 @@
     ]
   },
   {
-    "title": "Phấn hoa - nỗi ám ảnh của người Việt ở nước ngoài",
-    "content": "Bài viết đề cập đến nỗi ám ảnh của người Việt Nam sống ở nước ngoài, đặc biệt là tại Nhật Bản, do dị ứng phấn hoa. Nhiều người như Văn Phong và Hồng Hạnh phải bỏ công việc tốt để trở về quê hương vì không thể chịu đựng được triệu chứng dị ứng nặng nề trong mùa xuân. Dị ứng phấn hoa ảnh hưởng nghiêm trọng đến sức khỏe và chất lượng cuộc sống của họ, với tỷ lệ người mắc bệnh ngày càng gia tăng.",
-    "link": "https://vnexpress.net/phan-hoa-noi-am-anh-cua-nguoi-viet-o-nuoc-ngoai-4861536.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Dị ứng phấn hoa ảnh hưởng đến người Việt ở nước ngoài như thế nào?",
-    "answers": [
-      {
-        "text": "Nó khiến họ phải bỏ việc và trở về nước.",
-        "correct": true
-      },
-      {
-        "text": "Nó không ảnh hưởng nhiều đến công việc.",
-        "correct": false
-      },
-      {
-        "text": "Người mắc dị ứng phấn hoa luôn khỏe mạnh.",
-        "correct": false
-      },
-      {
-        "text": "Mọi người đều thích mùa xuân và không lo lắng.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bị PT ép tập gym quá sức",
     "content": "Bài viết kể về Tùng, một người tập gym bị huấn luyện viên cá nhân (PT) ép tập luyện quá sức. Sau hai tuần với cường độ cao, Tùng cảm thấy cơ thể kiệt sức và phải dừng tập do chấn thương và các triệu chứng suy nhược. Ngoài Tùng, một trường hợp khác là Thúy Mai cũng gặp tình trạng tương tự khi bị ép tập với cường độ cao dẫn đến chấn thương. Các bác sĩ khuyến cáo rằng việc tập luyện cần có sự cân bằng và không nên ép cơ thể làm việc quá mức, nhằm tránh chấn thương và ảnh hưởng đến sức khỏe.",
     "link": "https://vnexpress.net/bi-pt-ep-tap-gym-qua-suc-4862236.html",
@@ -4555,6 +4528,33 @@
       },
       {
         "text": "Vì không có huấn luyện viên cá nhân.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Phấn hoa - nỗi ám ảnh của người Việt ở nước ngoài",
+    "content": "Bài viết đề cập đến nỗi ám ảnh của người Việt Nam sống ở nước ngoài, đặc biệt là tại Nhật Bản, do dị ứng phấn hoa. Nhiều người như Văn Phong và Hồng Hạnh phải bỏ công việc tốt để trở về quê hương vì không thể chịu đựng được triệu chứng dị ứng nặng nề trong mùa xuân. Dị ứng phấn hoa ảnh hưởng nghiêm trọng đến sức khỏe và chất lượng cuộc sống của họ, với tỷ lệ người mắc bệnh ngày càng gia tăng.",
+    "link": "https://vnexpress.net/phan-hoa-noi-am-anh-cua-nguoi-viet-o-nuoc-ngoai-4861536.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Dị ứng phấn hoa ảnh hưởng đến người Việt ở nước ngoài như thế nào?",
+    "answers": [
+      {
+        "text": "Nó khiến họ phải bỏ việc và trở về nước.",
+        "correct": true
+      },
+      {
+        "text": "Nó không ảnh hưởng nhiều đến công việc.",
+        "correct": false
+      },
+      {
+        "text": "Người mắc dị ứng phấn hoa luôn khỏe mạnh.",
+        "correct": false
+      },
+      {
+        "text": "Mọi người đều thích mùa xuân và không lo lắng.",
         "correct": false
       }
     ]
@@ -4765,33 +4765,6 @@
     ]
   },
   {
-    "title": "Xe Tesla không phân biệt được bức tường giả",
-    "content": "Trong một thử nghiệm so sánh giữa xe Tesla và Lexus, hệ thống Autopilot của Tesla đã không phát hiện được bức tường giả được vẽ giống như đường đi, dẫn đến việc xe đâm vào bức tường này. Trong khi đó, xe Lexus trang bị lidar đã dừng lại an toàn. Thử nghiệm cho thấy rằng công nghệ lidar có khả năng phát hiện chính xác hơn các vật thể trong môi trường so với chỉ sử dụng camera như Tesla. Elon Musk trước đó đã chỉ trích lidar là không cần thiết và đắt tiền.",
-    "link": "https://vnexpress.net/xe-tesla-khong-phan-biet-duoc-buc-tuong-gia-4862379.html",
-    "cat": "oto-xe-may",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Tại sao xe Tesla không dừng lại khi gặp bức tường giả?",
-    "answers": [
-      {
-        "text": "Vì xe Tesla chỉ sử dụng camera và không phát hiện được bức tường giả.",
-        "correct": true
-      },
-      {
-        "text": "Vì xe Tesla không có hệ thống phanh khẩn cấp.",
-        "correct": false
-      },
-      {
-        "text": "Vì xe Tesla chạy quá nhanh nên không thể dừng lại.",
-        "correct": false
-      },
-      {
-        "text": "Vì bức tường giả quá nhỏ nên xe Tesla không thấy.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đi viện hết cảnh 'xếp hàng, chờ kết quả' nhờ chuyển đổi số",
     "content": "Bệnh viện Bạch Mai đã triển khai chuyển đổi số toàn diện, giúp bệnh nhân không cần chờ đợi lâu để nhận kết quả xét nghiệm. Thay vào đó, họ có thể sử dụng ứng dụng Bạch Mai Care để theo dõi kết quả và lịch sử khám chữa bệnh một cách thuận tiện. Việc này không chỉ tiết kiệm thời gian cho bệnh nhân mà còn giúp giảm áp lực cho nhân viên y tế. Chuyển đổi số trong ngành y tế đang là xu hướng tất yếu, với nhiều bệnh viện khác cũng bắt đầu áp dụng công nghệ mới để cải thiện dịch vụ khám chữa bệnh.",
     "link": "https://vnexpress.net/di-vien-het-canh-xep-hang-cho-ket-qua-nho-chuyen-doi-so-4862770.html",
@@ -4814,6 +4787,33 @@
       },
       {
         "text": "Cung cấp thêm nhiều loại thuốc mới cho bệnh nhân.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Xe Tesla không phân biệt được bức tường giả",
+    "content": "Trong một thử nghiệm so sánh giữa xe Tesla và Lexus, hệ thống Autopilot của Tesla đã không phát hiện được bức tường giả được vẽ giống như đường đi, dẫn đến việc xe đâm vào bức tường này. Trong khi đó, xe Lexus trang bị lidar đã dừng lại an toàn. Thử nghiệm cho thấy rằng công nghệ lidar có khả năng phát hiện chính xác hơn các vật thể trong môi trường so với chỉ sử dụng camera như Tesla. Elon Musk trước đó đã chỉ trích lidar là không cần thiết và đắt tiền.",
+    "link": "https://vnexpress.net/xe-tesla-khong-phan-biet-duoc-buc-tuong-gia-4862379.html",
+    "cat": "oto-xe-may",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao xe Tesla không dừng lại khi gặp bức tường giả?",
+    "answers": [
+      {
+        "text": "Vì xe Tesla chỉ sử dụng camera và không phát hiện được bức tường giả.",
+        "correct": true
+      },
+      {
+        "text": "Vì xe Tesla không có hệ thống phanh khẩn cấp.",
+        "correct": false
+      },
+      {
+        "text": "Vì xe Tesla chạy quá nhanh nên không thể dừng lại.",
+        "correct": false
+      },
+      {
+        "text": "Vì bức tường giả quá nhỏ nên xe Tesla không thấy.",
         "correct": false
       }
     ]
@@ -5181,33 +5181,6 @@
       },
       {
         "text": "Phá hoại tài sản công",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bình luận sai sự thật thông tin sáp nhập tỉnh thành, người đàn ông bị phạt 7,5 triệu đồng",
-    "content": "Ông Đ.Đ.C., 41 tuổi, ở Lạng Sơn, đã bị xử phạt 7,5 triệu đồng vì bình luận sai sự thật về thông tin sáp nhập các tỉnh, thành phố trên mạng xã hội Facebook. Công an tỉnh Lạng Sơn cho biết ông C. thừa nhận hành vi của mình và đã gỡ bỏ bình luận sau khi được tuyên truyền về quy định pháp luật. Công an khuyến cáo người dân không nên đăng tải hoặc chia sẻ thông tin sai sự thật, nhằm bảo vệ uy tín của các cơ quan, tổ chức.",
-    "link": "https://tuoitre.vn/binh-luan-sai-su-that-thong-tin-sap-nhap-tinh-thanh-nguoi-dan-ong-bi-phat-7-5-trieu-dong-20250318201037526.htm",
-    "cat": "phap-luat",
-    "positivity": 3,
-    "importance": 6,
-    "question": "Tại sao ông Đ.Đ.C. bị phạt 7,5 triệu đồng?",
-    "answers": [
-      {
-        "text": "Vì bình luận sai sự thật về thông tin sáp nhập tỉnh thành.",
-        "correct": true
-      },
-      {
-        "text": "Vì không đăng ký tài khoản Facebook.",
-        "correct": false
-      },
-      {
-        "text": "Vì không tham gia bình luận trên mạng xã hội.",
-        "correct": false
-      },
-      {
-        "text": "Vì chia sẻ thông tin đúng sự thật.",
         "correct": false
       }
     ]
