Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Bắt lái xe gây tai nạn khiến hai bà cháu tử vong",
+    "content": "Nguyễn Văn Hương, 52 tuổi, đã bị khởi tố và bắt giữ do gây tai nạn giao thông nghiêm trọng khiến hai bà cháu tử vong. Vụ tai nạn xảy ra vào ngày 15-2, khi Hương lái xe ô tô không đúng làn đường quy định, va chạm với xe máy của bà H.T.Đ. và cháu K. (7 tuổi). Hai nạn nhân đã tử vong ngay sau vụ tai nạn, trong khi Hương đã rời khỏi hiện trường nhưng sau đó đã tự thú tại cơ quan công an.",
+    "link": "https://tuoitre.vn/bat-lai-xe-gay-tai-nan-khien-hai-ba-chau-tu-vong-2025031919391863.htm",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 9,
+    "question": "Vụ tai nạn giao thông nào đã khiến hai bà cháu tử vong ở Hà Tĩnh?",
+    "answers": [
+      {
+        "text": "Nguyễn Văn Hương lái xe gây tai nạn khiến hai bà cháu tử vong.",
+        "correct": true
+      },
+      {
+        "text": "Một tài xế xe tải va chạm với xe máy.",
+        "correct": false
+      },
+      {
+        "text": "Tai nạn giữa hai ô tô trên quốc lộ 1.",
+        "correct": false
+      },
+      {
+        "text": "Xe khách bị xe tải tông trên đèo Khánh Lê.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thổ Nhĩ Kỳ bắt giữ Thị trưởng Istanbul",
     "content": "Cảnh sát Thổ Nhĩ Kỳ đã bắt giữ Thị trưởng Istanbul, Ekrem Imamoglu, vào ngày 19/3/2025 trong một cuộc điều tra tham nhũng và khủng bố. Ông bị cáo buộc đứng đầu một tổ chức tội phạm và có liên quan đến các cáo buộc hỗ trợ đảng Công nhân Người Kurd, một tổ chức bị xem là khủng bố. Việc bắt giữ diễn ra trong bối cảnh ông Imamoglu chuẩn bị cho cuộc bầu cử tổng thống của phe đối lập, và đã dẫn đến việc cấm biểu tình tại nhiều khu vực ở Istanbul.",
     "link": "https://dantri.com.vn/the-gioi/tho-nhi-ky-bat-giu-thi-truong-istanbul-20250319162903940.htm",
