Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Nhóm thanh niên đánh tài xế xe buýt cạnh trạm cảnh sát giao thông đến xin lỗi",
+    "content": "Một nhóm thanh niên đã đánh tài xế xe buýt ngay cạnh Trạm cảnh sát giao thông Ninh Hòa, Khánh Hòa. Sau sự việc, nhóm thanh niên này đã đến trụ sở công ty để xin lỗi tài xế và cho biết họ đã có hơi men khi hành động. Công ty TNHH Quyết Thắng Nha Trang đang phối hợp với công an để điều tra và xử lý vụ việc.",
+    "link": "https://tuoitre.vn/nhom-thanh-nien-danh-tai-xe-xe-buyt-canh-tram-canh-sat-giao-thong-den-xin-loi-2025031914324963.htm",
+    "cat": "phap-luat",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Nhóm thanh niên đã làm gì với tài xế xe buýt?",
+    "answers": [
+      {
+        "text": "Hành hung tài xế xe buýt",
+        "correct": true
+      },
+      {
+        "text": "Đưa tài xế đến viện",
+        "correct": false
+      },
+      {
+        "text": "Xin lỗi tài xế xe buýt",
+        "correct": false
+      },
+      {
+        "text": "Chạy trốn khỏi hiện trường",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hai ái nữ chủ tịch OCB muốn bán gần 100 triệu cổ phiếu, dự thu nghìn tỉ",
     "content": "Trịnh Mai Linh và Trịnh Mai Vân, hai con gái của chủ tịch OCB Trịnh Văn Tuấn, đã đăng ký bán gần 100 triệu cổ phiếu OCB trong khoảng thời gian từ 21-3 đến 19-4. Trịnh Mai Linh sẽ bán 50 triệu cổ phiếu, giảm tỉ lệ sở hữu xuống 2,24%, trong khi Trịnh Mai Vân sẽ bán 45 triệu cổ phiếu, giảm tỉ lệ sở hữu xuống 1,92%. Dự kiến, hai cô gái này có thể thu về hơn 1.068 tỉ đồng từ giao dịch này.",
     "link": "https://tuoitre.vn/hai-ai-nu-chu-tich-ocb-muon-ban-gan-100-trieu-co-phieu-du-thu-nghin-ti-20250319210633485.htm",
@@ -800,32 +827,55 @@
     ]
   },
   {
-    "title": "Dấu hiệu nhận biết bệnh xơ phổi",
-    "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
-    "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
+    "title": "Ăn uống, sinh hoạt thế nào khi còn một quả thận?",
+    "content": "Bài viết cung cấp thông tin về cách sinh hoạt và chế độ ăn uống cho người còn một quả thận. Sau phẫu thuật cắt thận, người bệnh cần chú ý bảo vệ sức khỏe, tránh các môn thể thao va chạm và áp dụng chế độ dinh dưỡng lành mạnh, cân bằng, giảm muối và hạn chế thực phẩm chứa kali, phốt pho. Đồng thời, cần theo dõi sức khỏe định kỳ và thận trọng khi sử dụng thuốc không kê đơn.",
+    "link": "https://vnexpress.net/an-uong-sinh-hoat-the-nao-khi-con-mot-qua-than-4863313.html",
     "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Bệnh xơ phổi có những triệu chứng nào cần chú ý?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Cần lưu ý gì khi sinh hoạt và ăn uống cho người còn một quả thận?",
     "answers": [
       {
-        "text": "Khó thở và ho khan kéo dài",
+        "text": "Cần tránh thực phẩm chứa nhiều kali và phốt pho.",
         "correct": true
       },
       {
-        "text": "Đau đầu và chóng mặt",
+        "text": "Có thể ăn thoải mái các loại thực phẩm chế biến sẵn.",
         "correct": false
       },
       {
-        "text": "Nôn mửa và tiêu chảy",
+        "text": "Nên tập các môn thể thao va chạm như bóng đá.",
         "correct": false
       },
       {
-        "text": "Mệt mỏi và sốt cao",
+        "text": "Không cần kiểm tra sức khỏe định kỳ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
+    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
+    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
+    "cat": "giai-tri",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
+    "answers": [
+      {
+        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
+        "correct": true
+      },
+      {
+        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
         "correct": false
       },
       {
-        "text": "Đau bụng và khó tiêu",
+        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
+        "correct": false
+      },
+      {
+        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
         "correct": false
       }
     ]
@@ -916,55 +966,32 @@
     ]
   },
   {
-    "title": "Ăn uống, sinh hoạt thế nào khi còn một quả thận?",
-    "content": "Bài viết cung cấp thông tin về cách sinh hoạt và chế độ ăn uống cho người còn một quả thận. Sau phẫu thuật cắt thận, người bệnh cần chú ý bảo vệ sức khỏe, tránh các môn thể thao va chạm và áp dụng chế độ dinh dưỡng lành mạnh, cân bằng, giảm muối và hạn chế thực phẩm chứa kali, phốt pho. Đồng thời, cần theo dõi sức khỏe định kỳ và thận trọng khi sử dụng thuốc không kê đơn.",
-    "link": "https://vnexpress.net/an-uong-sinh-hoat-the-nao-khi-con-mot-qua-than-4863313.html",
+    "title": "Dấu hiệu nhận biết bệnh xơ phổi",
+    "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
+    "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Cần lưu ý gì khi sinh hoạt và ăn uống cho người còn một quả thận?",
-    "answers": [
-      {
-        "text": "Cần tránh thực phẩm chứa nhiều kali và phốt pho.",
-        "correct": true
-      },
-      {
-        "text": "Có thể ăn thoải mái các loại thực phẩm chế biến sẵn.",
-        "correct": false
-      },
-      {
-        "text": "Nên tập các môn thể thao va chạm như bóng đá.",
-        "correct": false
-      },
-      {
-        "text": "Không cần kiểm tra sức khỏe định kỳ.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
-    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
-    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
-    "cat": "giai-tri",
     "positivity": 6,
-    "importance": 7,
-    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
+    "importance": 8,
+    "question": "Bệnh xơ phổi có những triệu chứng nào cần chú ý?",
     "answers": [
       {
-        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
+        "text": "Khó thở và ho khan kéo dài",
         "correct": true
       },
       {
-        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
+        "text": "Đau đầu và chóng mặt",
         "correct": false
       },
       {
-        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
+        "text": "Nôn mửa và tiêu chảy",
         "correct": false
       },
       {
-        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
+        "text": "Mệt mỏi và sốt cao",
+        "correct": false
+      },
+      {
+        "text": "Đau bụng và khó tiêu",
         "correct": false
       }
     ]
