--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "HLV Kim Sang-sik không hài lòng với trận thắng Campuchia",
+    "content": "HLV Kim Sang-sik bày tỏ sự không hài lòng với phong độ của đội tuyển Việt Nam trong trận thắng Campuchia 2-1. Mặc dù đội ghi hai bàn trong hiệp một, họ lại gặp khó khăn trong hiệp hai, đặc biệt khi một số cầu thủ chủ chốt rời sân. HLV Kim cho biết đội đã gặp vấn đề trong việc duy trì áp lực và triển khai bóng, đồng thời lo lắng về tình trạng chấn thương của một số cầu thủ.",
+    "link": "https://vnexpress.net/hlv-kim-sang-sik-khong-hai-long-voi-tran-thang-campuchia-4863481.html",
+    "cat": "the-thao",
+    "positivity": 6,
+    "importance": 7,
+    "question": "HLV Kim Sang-sik không hài lòng về điều gì trong trận thắng Campuchia?",
+    "answers": [
+      {
+        "text": "Phong độ của đội trong hiệp hai",
+        "correct": true
+      },
+      {
+        "text": "Sự chấn thương của các cầu thủ",
+        "correct": false
+      },
+      {
+        "text": "Chiến thuật của đối thủ",
+        "correct": false
+      },
+      {
+        "text": "Kết quả trận đấu",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Phê duyệt chủ trương đầu tư dự án bến cảng Long Sơn Mỹ Xuân quy mô 2.385 tỉ đồng",
     "content": "Phó Thủ tướng Trần Hồng Hà vừa ký Quyết định phê duyệt chủ trương đầu tư dự án bến cảng tổng hợp Long Sơn Mỹ Xuân tại Bà Rịa - Vũng Tàu với tổng vốn đầu tư 2.385 tỉ đồng. Dự án sẽ được thực hiện trên diện tích 41,65 ha, bao gồm một bến tiếp nhận tàu trọng tải đến 30.000 DWT và 04 bến sà lan. Mục tiêu của dự án là phát triển kinh tế - xã hội cho tỉnh Bà Rịa - Vũng Tàu và khu vực phía Nam, đồng thời bảo vệ môi trường và tài nguyên rừng theo quy định của pháp luật.",
     "link": "https://tuoitre.vn/phe-duyet-chu-truong-dau-tu-du-an-ben-cang-long-son-my-xuan-quy-mo-2-385-ti-dong-2025031921495298.htm",
@@ -987,28 +1014,32 @@
     ]
   },
   {
-    "title": "Ăn uống, sinh hoạt thế nào khi còn một quả thận?",
-    "content": "Bài viết cung cấp thông tin về cách sinh hoạt và chế độ ăn uống cho người còn một quả thận. Sau phẫu thuật cắt thận, người bệnh cần chú ý bảo vệ sức khỏe, tránh các môn thể thao va chạm và áp dụng chế độ dinh dưỡng lành mạnh, cân bằng, giảm muối và hạn chế thực phẩm chứa kali, phốt pho. Đồng thời, cần theo dõi sức khỏe định kỳ và thận trọng khi sử dụng thuốc không kê đơn.",
-    "link": "https://vnexpress.net/an-uong-sinh-hoat-the-nao-khi-con-mot-qua-than-4863313.html",
+    "title": "Dấu hiệu nhận biết bệnh xơ phổi",
+    "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
+    "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
     "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Cần lưu ý gì khi sinh hoạt và ăn uống cho người còn một quả thận?",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Bệnh xơ phổi có những triệu chứng nào cần chú ý?",
     "answers": [
       {
-        "text": "Cần tránh thực phẩm chứa nhiều kali và phốt pho.",
+        "text": "Khó thở và ho khan kéo dài",
         "correct": true
       },
       {
-        "text": "Có thể ăn thoải mái các loại thực phẩm chế biến sẵn.",
+        "text": "Đau đầu và chóng mặt",
         "correct": false
       },
       {
-        "text": "Nên tập các môn thể thao va chạm như bóng đá.",
+        "text": "Nôn mửa và tiêu chảy",
         "correct": false
       },
       {
-        "text": "Không cần kiểm tra sức khỏe định kỳ.",
+        "text": "Mệt mỏi và sốt cao",
+        "correct": false
+      },
+      {
+        "text": "Đau bụng và khó tiêu",
         "correct": false
       }
     ]
@@ -1036,33 +1067,6 @@
       },
       {
         "text": "Không có thông tin nào về ưu đãi cho xe GAC.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
-    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
-    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
-    "cat": "giai-tri",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
-    "answers": [
-      {
-        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
-        "correct": true
-      },
-      {
-        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
-        "correct": false
-      },
-      {
-        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
-        "correct": false
-      },
-      {
-        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
         "correct": false
       }
     ]
@@ -1126,32 +1130,55 @@
     ]
   },
   {
-    "title": "Dấu hiệu nhận biết bệnh xơ phổi",
-    "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
-    "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
+    "title": "Ăn uống, sinh hoạt thế nào khi còn một quả thận?",
+    "content": "Bài viết cung cấp thông tin về cách sinh hoạt và chế độ ăn uống cho người còn một quả thận. Sau phẫu thuật cắt thận, người bệnh cần chú ý bảo vệ sức khỏe, tránh các môn thể thao va chạm và áp dụng chế độ dinh dưỡng lành mạnh, cân bằng, giảm muối và hạn chế thực phẩm chứa kali, phốt pho. Đồng thời, cần theo dõi sức khỏe định kỳ và thận trọng khi sử dụng thuốc không kê đơn.",
+    "link": "https://vnexpress.net/an-uong-sinh-hoat-the-nao-khi-con-mot-qua-than-4863313.html",
     "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Bệnh xơ phổi có những triệu chứng nào cần chú ý?",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Cần lưu ý gì khi sinh hoạt và ăn uống cho người còn một quả thận?",
     "answers": [
       {
-        "text": "Khó thở và ho khan kéo dài",
+        "text": "Cần tránh thực phẩm chứa nhiều kali và phốt pho.",
         "correct": true
       },
       {
-        "text": "Đau đầu và chóng mặt",
+        "text": "Có thể ăn thoải mái các loại thực phẩm chế biến sẵn.",
         "correct": false
       },
       {
-        "text": "Nôn mửa và tiêu chảy",
+        "text": "Nên tập các môn thể thao va chạm như bóng đá.",
         "correct": false
       },
       {
-        "text": "Mệt mỏi và sốt cao",
+        "text": "Không cần kiểm tra sức khỏe định kỳ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
+    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
+    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
+    "cat": "giai-tri",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
+    "answers": [
+      {
+        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
+        "correct": true
+      },
+      {
+        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
         "correct": false
       },
       {
-        "text": "Đau bụng và khó tiêu",
+        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
+        "correct": false
+      },
+      {
+        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
         "correct": false
       }
     ]
