--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Bom gần 350 kg nằm dưới nền sân bóng",
+    "content": "Trong quá trình thi công sân bóng tại xã Diễn Lộc, huyện Diễn Châu, công nhân đã phát hiện một quả bom nặng gần 350 kg nằm dưới lòng đất. Quả bom này, còn nguyên kíp nổ và có ký hiệu Mk-82, được xác định là sót lại từ thời kỳ chiến tranh. Sau khi phát hiện, nhà chức trách đã phong tỏa khu vực và công binh đã tiến hành vô hiệu hóa và tiêu hủy thành công quả bom.",
+    "link": "https://vnexpress.net/bom-gan-350-kg-nam-duoi-nen-san-bong-4863477.html",
+    "cat": "phap-luat",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Quả bom nặng gần 350 kg được tìm thấy ở đâu?",
+    "answers": [
+      {
+        "text": "Sân bóng xã Diễn Lộc, huyện Diễn Châu",
+        "correct": true
+      },
+      {
+        "text": "Khu dân cư thành phố Nghệ An",
+        "correct": false
+      },
+      {
+        "text": "Trường học huyện Diễn Châu",
+        "correct": false
+      },
+      {
+        "text": "Công trường xây dựng đường Quốc lộ",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "HLV Kim Sang-sik không hài lòng với trận thắng Campuchia",
     "content": "HLV Kim Sang-sik bày tỏ sự không hài lòng với phong độ của đội tuyển Việt Nam trong trận thắng Campuchia 2-1. Mặc dù đội ghi hai bàn trong hiệp một, họ lại gặp khó khăn trong hiệp hai, đặc biệt khi một số cầu thủ chủ chốt rời sân. HLV Kim cho biết đội đã gặp vấn đề trong việc duy trì áp lực và triển khai bóng, đồng thời lo lắng về tình trạng chấn thương của một số cầu thủ.",
     "link": "https://vnexpress.net/hlv-kim-sang-sik-khong-hai-long-voi-tran-thang-campuchia-4863481.html",
@@ -1045,28 +1072,28 @@
     ]
   },
   {
-    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
-    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
-    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
-    "cat": "giai-tri",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
+    "title": "6 mẹo giúp bỏ thuốc lá",
+    "content": "Bài viết đưa ra 6 mẹo giúp người hút thuốc lá từ bỏ thói quen này, bao gồm việc lập kế hoạch cụ thể, củng cố ý chí, thay đổi lối sống lành mạnh, tìm kiếm phương pháp thay thế, tìm kiếm sự hỗ trợ từ người thân và sử dụng thuốc theo toa nếu cần. Việc cai thuốc lá cần sự kiên trì và quyết tâm cao, đồng thời nhận thức rõ ràng về tác hại của thuốc lá với sức khỏe.",
+    "link": "https://vnexpress.net/6-meo-giup-bo-thuoc-la-4863176.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Làm thế nào để bỏ thuốc lá hiệu quả?",
     "answers": [
       {
-        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
+        "text": "Lập kế hoạch cai thuốc và thay đổi lối sống.",
         "correct": true
       },
       {
-        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
+        "text": "Chỉ cần bỏ thuốc là sẽ không còn thèm thuốc.",
         "correct": false
       },
       {
-        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
+        "text": "Hút thuốc ít hơn mỗi ngày là đủ.",
         "correct": false
       },
       {
-        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
+        "text": "Không cần phải có sự hỗ trợ từ người khác.",
         "correct": false
       }
     ]
@@ -1094,33 +1121,6 @@
       },
       {
         "text": "Không có thông tin nào về ưu đãi cho xe GAC.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "6 mẹo giúp bỏ thuốc lá",
-    "content": "Bài viết đưa ra 6 mẹo giúp người hút thuốc lá từ bỏ thói quen này, bao gồm việc lập kế hoạch cụ thể, củng cố ý chí, thay đổi lối sống lành mạnh, tìm kiếm phương pháp thay thế, tìm kiếm sự hỗ trợ từ người thân và sử dụng thuốc theo toa nếu cần. Việc cai thuốc lá cần sự kiên trì và quyết tâm cao, đồng thời nhận thức rõ ràng về tác hại của thuốc lá với sức khỏe.",
-    "link": "https://vnexpress.net/6-meo-giup-bo-thuoc-la-4863176.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Làm thế nào để bỏ thuốc lá hiệu quả?",
-    "answers": [
-      {
-        "text": "Lập kế hoạch cai thuốc và thay đổi lối sống.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần bỏ thuốc là sẽ không còn thèm thuốc.",
-        "correct": false
-      },
-      {
-        "text": "Hút thuốc ít hơn mỗi ngày là đủ.",
-        "correct": false
-      },
-      {
-        "text": "Không cần phải có sự hỗ trợ từ người khác.",
         "correct": false
       }
     ]
@@ -1210,6 +1210,33 @@
       },
       {
         "text": "Không cần kiểm tra sức khỏe định kỳ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
+    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
+    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
+    "cat": "giai-tri",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
+    "answers": [
+      {
+        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
+        "correct": true
+      },
+      {
+        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
+        "correct": false
+      },
+      {
+        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
+        "correct": false
+      },
+      {
+        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
         "correct": false
       }
     ]
@@ -2607,33 +2634,6 @@
     ]
   },
   {
-    "title": "Hãng ô tô Audi cắt giảm hàng nghìn việc làm ở Đức",
-    "content": "Hãng ô tô Audi đã quyết định cắt giảm 7.500 việc làm tại Đức, tương đương 8% lực lượng lao động toàn cầu của hãng, nhằm đối phó với những thách thức trong ngành ô tô hiện nay, bao gồm nhu cầu chậm lại đối với xe điện và sự cạnh tranh gia tăng. Quyết định này dự kiến sẽ được thực hiện vào cuối năm 2029 thông qua các hình thức sa thải tự nguyện và chấm dứt hợp đồng. Chủ tịch Audi cũng nhấn mạnh rằng sẽ không có sa thải bắt buộc cho đến năm 2033, nhằm bảo đảm việc làm cho nhân viên trong bối cảnh kinh tế khó khăn.",
-    "link": "https://tuoitre.vn/hang-o-to-audi-cat-giam-hang-nghin-viec-lam-o-duc-20250318171943316.htm",
-    "cat": "kinh-doanh",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Tại sao Audi cắt giảm việc làm ở Đức?",
-    "answers": [
-      {
-        "text": "Do thách thức trong ngành công nghiệp ô tô và nhu cầu chậm lại đối với xe điện.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng cường sản xuất xe điện mới.",
-        "correct": false
-      },
-      {
-        "text": "Vì lý do tài chính cá nhân của nhân viên.",
-        "correct": false
-      },
-      {
-        "text": "Để mở rộng thị trường sang châu Á.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
     "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
     "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
@@ -2656,6 +2656,33 @@
       },
       {
         "text": "Đau lưng chỉ là vấn đề tạm thời.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hãng ô tô Audi cắt giảm hàng nghìn việc làm ở Đức",
+    "content": "Hãng ô tô Audi đã quyết định cắt giảm 7.500 việc làm tại Đức, tương đương 8% lực lượng lao động toàn cầu của hãng, nhằm đối phó với những thách thức trong ngành ô tô hiện nay, bao gồm nhu cầu chậm lại đối với xe điện và sự cạnh tranh gia tăng. Quyết định này dự kiến sẽ được thực hiện vào cuối năm 2029 thông qua các hình thức sa thải tự nguyện và chấm dứt hợp đồng. Chủ tịch Audi cũng nhấn mạnh rằng sẽ không có sa thải bắt buộc cho đến năm 2033, nhằm bảo đảm việc làm cho nhân viên trong bối cảnh kinh tế khó khăn.",
+    "link": "https://tuoitre.vn/hang-o-to-audi-cat-giam-hang-nghin-viec-lam-o-duc-20250318171943316.htm",
+    "cat": "kinh-doanh",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao Audi cắt giảm việc làm ở Đức?",
+    "answers": [
+      {
+        "text": "Do thách thức trong ngành công nghiệp ô tô và nhu cầu chậm lại đối với xe điện.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng cường sản xuất xe điện mới.",
+        "correct": false
+      },
+      {
+        "text": "Vì lý do tài chính cá nhân của nhân viên.",
+        "correct": false
+      },
+      {
+        "text": "Để mở rộng thị trường sang châu Á.",
         "correct": false
       }
     ]
@@ -4678,33 +4705,6 @@
     ]
   },
   {
-    "title": "Xe Tesla không phân biệt được bức tường giả",
-    "content": "Trong một thử nghiệm so sánh giữa xe Tesla và Lexus, hệ thống Autopilot của Tesla đã không phát hiện được bức tường giả được vẽ giống như đường đi, dẫn đến việc xe đâm vào bức tường này. Trong khi đó, xe Lexus trang bị lidar đã dừng lại an toàn. Thử nghiệm cho thấy rằng công nghệ lidar có khả năng phát hiện chính xác hơn các vật thể trong môi trường so với chỉ sử dụng camera như Tesla. Elon Musk trước đó đã chỉ trích lidar là không cần thiết và đắt tiền.",
-    "link": "https://vnexpress.net/xe-tesla-khong-phan-biet-duoc-buc-tuong-gia-4862379.html",
-    "cat": "oto-xe-may",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Tại sao xe Tesla không dừng lại khi gặp bức tường giả?",
-    "answers": [
-      {
-        "text": "Vì xe Tesla chỉ sử dụng camera và không phát hiện được bức tường giả.",
-        "correct": true
-      },
-      {
-        "text": "Vì xe Tesla không có hệ thống phanh khẩn cấp.",
-        "correct": false
-      },
-      {
-        "text": "Vì xe Tesla chạy quá nhanh nên không thể dừng lại.",
-        "correct": false
-      },
-      {
-        "text": "Vì bức tường giả quá nhỏ nên xe Tesla không thấy.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đi viện hết cảnh 'xếp hàng, chờ kết quả' nhờ chuyển đổi số",
     "content": "Bệnh viện Bạch Mai đã triển khai chuyển đổi số toàn diện, giúp bệnh nhân không cần chờ đợi lâu để nhận kết quả xét nghiệm. Thay vào đó, họ có thể sử dụng ứng dụng Bạch Mai Care để theo dõi kết quả và lịch sử khám chữa bệnh một cách thuận tiện. Việc này không chỉ tiết kiệm thời gian cho bệnh nhân mà còn giúp giảm áp lực cho nhân viên y tế. Chuyển đổi số trong ngành y tế đang là xu hướng tất yếu, với nhiều bệnh viện khác cũng bắt đầu áp dụng công nghệ mới để cải thiện dịch vụ khám chữa bệnh.",
     "link": "https://vnexpress.net/di-vien-het-canh-xep-hang-cho-ket-qua-nho-chuyen-doi-so-4862770.html",
@@ -4727,6 +4727,33 @@
       },
       {
         "text": "Cung cấp thêm nhiều loại thuốc mới cho bệnh nhân.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Xe Tesla không phân biệt được bức tường giả",
+    "content": "Trong một thử nghiệm so sánh giữa xe Tesla và Lexus, hệ thống Autopilot của Tesla đã không phát hiện được bức tường giả được vẽ giống như đường đi, dẫn đến việc xe đâm vào bức tường này. Trong khi đó, xe Lexus trang bị lidar đã dừng lại an toàn. Thử nghiệm cho thấy rằng công nghệ lidar có khả năng phát hiện chính xác hơn các vật thể trong môi trường so với chỉ sử dụng camera như Tesla. Elon Musk trước đó đã chỉ trích lidar là không cần thiết và đắt tiền.",
+    "link": "https://vnexpress.net/xe-tesla-khong-phan-biet-duoc-buc-tuong-gia-4862379.html",
+    "cat": "oto-xe-may",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao xe Tesla không dừng lại khi gặp bức tường giả?",
+    "answers": [
+      {
+        "text": "Vì xe Tesla chỉ sử dụng camera và không phát hiện được bức tường giả.",
+        "correct": true
+      },
+      {
+        "text": "Vì xe Tesla không có hệ thống phanh khẩn cấp.",
+        "correct": false
+      },
+      {
+        "text": "Vì xe Tesla chạy quá nhanh nên không thể dừng lại.",
+        "correct": false
+      },
+      {
+        "text": "Vì bức tường giả quá nhỏ nên xe Tesla không thấy.",
         "correct": false
       }
     ]
@@ -4808,33 +4835,6 @@
       },
       {
         "text": "Chỉ bị cảm cúm",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cuộc sống ở chung cư Hà Nội sau xây mới",
-    "content": "Cuộc sống của cư dân tại khu tập thể Kim Liên, Hà Nội đã có sự thay đổi lớn sau khi các tòa nhà cũ B7 và B10 được xây mới. Các căn hộ mới có diện tích rộng rãi hơn, từ 24 đến 90 m2, và được trang bị nhiều tiện nghi hiện đại như thang máy và nhà vệ sinh khép kín. Cư dân không chỉ cải thiện chất lượng cuộc sống mà còn có thêm không gian riêng tư, góp phần nâng cao đời sống tinh thần và sinh hoạt hàng ngày của họ.",
-    "link": "https://vnexpress.net/cuoc-song-o-chung-cu-ha-noi-sau-xay-moi-4862344.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Cuộc sống của cư dân Kim Liên đã thay đổi như thế nào sau khi xây mới?",
-    "answers": [
-      {
-        "text": "Cư dân có cuộc sống tốt hơn với căn hộ rộng rãi và tiện nghi hiện đại.",
-        "correct": true
-      },
-      {
-        "text": "Cư dân vẫn sống trong điều kiện cũ và chật chội.",
-        "correct": false
-      },
-      {
-        "text": "Không có sự thay đổi nào đáng kể.",
-        "correct": false
-      },
-      {
-        "text": "Cư dân bị mất nhà và phải di chuyển đến nơi khác.",
         "correct": false
       }
     ]
