--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Hội chứng khiến Justine Bieber cảm thấy giống 'kẻ lừa đảo'",
+    "content": "Ca sĩ Justin Bieber đã chia sẻ về cuộc chiến của mình với hội chứng kẻ mạo danh, cảm giác mà anh cho rằng mình không xứng đáng với thành công và thường cảm thấy như kẻ lừa đảo. Hội chứng này khiến người mắc nghi ngờ khả năng của bản thân, cho rằng thành công là do may mắn và sợ rằng người khác sẽ phát hiện ra điều đó. Bieber nhấn mạnh rằng nhiều người cũng trải qua cảm giác này, và anh muốn những người khác biết họ không đơn độc trong cuộc chiến này.",
+    "link": "https://vnexpress.net/hoi-chung-khien-justine-bieber-cam-thay-giong-ke-lua-dao-4862924.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Hội chứng kẻ mạo danh là gì?",
+    "answers": [
+      {
+        "text": "Là cảm giác nghi ngờ vào khả năng và thành công của bản thân.",
+        "correct": true
+      },
+      {
+        "text": "Là một loại bệnh truyền nhiễm.",
+        "correct": false
+      },
+      {
+        "text": "Là triệu chứng của một căn bệnh tâm lý khác.",
+        "correct": false
+      },
+      {
+        "text": "Là một hội chứng chỉ xảy ra với những người nổi tiếng.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bom gần 350 kg nằm dưới nền sân bóng",
     "content": "Trong quá trình thi công sân bóng tại xã Diễn Lộc, huyện Diễn Châu, công nhân đã phát hiện một quả bom nặng gần 350 kg nằm dưới lòng đất. Quả bom này, còn nguyên kíp nổ và có ký hiệu Mk-82, được xác định là sót lại từ thời kỳ chiến tranh. Sau khi phát hiện, nhà chức trách đã phong tỏa khu vực và công binh đã tiến hành vô hiệu hóa và tiêu hủy thành công quả bom.",
     "link": "https://vnexpress.net/bom-gan-350-kg-nam-duoi-nen-san-bong-4863477.html",
@@ -2957,33 +2984,6 @@
     ]
   },
   {
-    "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
-    "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
-    "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 6,
-    "question": "Đau lưng có phải là triệu chứng của bệnh thần kinh không?",
-    "answers": [
-      {
-        "text": "Có, đau lưng có thể là triệu chứng của bệnh thần kinh.",
-        "correct": true
-      },
-      {
-        "text": "Không, đau lưng chỉ do xương khớp.",
-        "correct": false
-      },
-      {
-        "text": "Đau lưng không liên quan đến thần kinh.",
-        "correct": false
-      },
-      {
-        "text": "Đau lưng chỉ là vấn đề tạm thời.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hãng ô tô Audi cắt giảm hàng nghìn việc làm ở Đức",
     "content": "Hãng ô tô Audi đã quyết định cắt giảm 7.500 việc làm tại Đức, tương đương 8% lực lượng lao động toàn cầu của hãng, nhằm đối phó với những thách thức trong ngành ô tô hiện nay, bao gồm nhu cầu chậm lại đối với xe điện và sự cạnh tranh gia tăng. Quyết định này dự kiến sẽ được thực hiện vào cuối năm 2029 thông qua các hình thức sa thải tự nguyện và chấm dứt hợp đồng. Chủ tịch Audi cũng nhấn mạnh rằng sẽ không có sa thải bắt buộc cho đến năm 2033, nhằm bảo đảm việc làm cho nhân viên trong bối cảnh kinh tế khó khăn.",
     "link": "https://tuoitre.vn/hang-o-to-audi-cat-giam-hang-nghin-viec-lam-o-duc-20250318171943316.htm",
@@ -3006,6 +3006,33 @@
       },
       {
         "text": "Để mở rộng thị trường sang châu Á.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
+    "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
+    "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Đau lưng có phải là triệu chứng của bệnh thần kinh không?",
+    "answers": [
+      {
+        "text": "Có, đau lưng có thể là triệu chứng của bệnh thần kinh.",
+        "correct": true
+      },
+      {
+        "text": "Không, đau lưng chỉ do xương khớp.",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng không liên quan đến thần kinh.",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng chỉ là vấn đề tạm thời.",
         "correct": false
       }
     ]
